@@ -20,6 +20,7 @@
 # the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 
 version=@version@
+codename=@codename@
 subversion=@subversion@
 rep_version=@REP_VERSION@
 SHELL=/bin/sh
