@@ -402,6 +402,7 @@ AC_SUBST(LINGUAS)
 AC_SUBST(KDE4_SESSION)
 AC_SUBST(GNOME2_SESSION)
 AC_SUBST(XDM_SESSION)
+AC_SUBST(codename)
 
 dnl Build all files
 AC_CONFIG_FILES([
