@@ -31,11 +31,11 @@ exec rep --batch "$0" "$@"
 
   (define dialog (gtk-about-dialog-new))
   (gtk-about-dialog-set-program-name dialog "Sawfish")
-  (gtk-about-dialog-set-version dialog "__version__")
+  (gtk-about-dialog-set-version dialog "__version__ \"__codename__\"")
   (gtk-about-dialog-set-copyright dialog "© 1999-2000 John Harper\
   \n© 2000 Eazel, Inc\
   \n© 2007-2008 Janek Kozicki\
-  \n© 2008-2010 Christopher Bratusek")
+  \n© 2008-2012 Christopher Bratusek et all")
   (gtk-about-dialog-set-license dialog "Sawfish is released under the terms of the\
   \n\n\tGNU General Public License version 2, or (at your option) any later version.\
   \n\nSee the `COPYING' file in the source tree for the full license.\
@@ -49,7 +49,7 @@ exec rep --batch "$0" "$@"
   \n2007-2010: Janek 'Re-Animator' Kozicki, Timo Korvola, Andrea Vetorello, Guillermo S. Romero\
   \n2008-2010: Christopher 'Flashrider' Bratusek, Teika 'Mister X' Kazura\
   \n2009-2010: Jeremy Hankins, Matthew Love\
-  \n1999-2010: All the brave contributors (see `THANKS' in `CONTRIBUTING')"))
+  \n1999-2012: All the brave contributors (see `THANKS' in `CONTRIBUTING')"))
   (gtk-about-dialog-set-translator-credits dialog "de: Christian Kirbach, Mario Blättermann\
   \nes: Jorge Gonzalez Gonzalez, Jacinto Capote Robles\
   \neu: Inaki Larranaga Murgoitio\
