@@ -17,6 +17,12 @@
 
 	* configure.in: bump version to 1.8.99 "Housenation"
 
+	* configure.in
+	* Makdefs.in
+	* scripts/Makefile.in
+	* scripts/sawfish-about.jl.in: update copyright notice // show
+	codename in the about-dialog
+
 2012-01-19  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/integration/razor.jl: fix razor-power calls
 
